# playground

./: .gitattributes  .gitignore  .gitmodules  README.md
analysis/: plot_forces.py
control/: 3dof.xml  behaviors.py  behaviors_tests.py  crane_scene.py  crane_scene_sim.py  helpers.py  humanoid.py  humanoid2.py  humanoid_2_tmp.py  humanoid_cassie.py  humanoid_tmp.py  lqr.py  mantis.py  misc.md  move_in_square.py  notes.md  posture_pos_control.py  qp_humanoid.py  qp_manipulator.py  qp_whole_body.py  quadruped.py  rl.py  robotis_op3.py  simple_control.py  standing_mantis.py  standing_mantis_torque.py  suspended_mantis.py  suspended_quadruped.py  todo.md  two_manip_wheel_base.py  wheeled_manip.py  wheeled_slides_manip.py
control/rl/: environments.py  make_video.py  networks.py  notes.md  rl.py  simulate.py  train_quadruped.py  visualize.py
control/rl/utils/: get_commit_url.py
docker/: Dockerfile  Dockerfile_cuda  Dockerfile_dev  build_image.sh  docker_version.sh  exec_last_container.sh  init.sh  readme.md  run_docker.sh  todo.md
proxqp/: .gitignore  CMakeLists.txt  notes.md  test.cpp  todo.md
src/: helpers.py  lqr.py  mujoco_example.py  notes.md  viewer_example.py
